Add a broadcast service to the Gatt server. Rename Fragments & Activity.
- Adding a broadcast service to the gatt server.
- Renaming activity and fragments to be more consistent with BLE terminology.

--- a/Blei/Blei/src/main/AndroidManifest.xml
+++ b/Blei/Blei/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 		<uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
 		<activity
-            android:name="com.innmotion.blei.BroadcastActivity"
+            android:name=".BLEActivity"
             android:label="Broadcast Activity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
